# kjv

./: .env.example  .gitignore  README.md  launch.py  pyproject.toml  run_tests.py
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: session.py
app/models/: daily_selection.py  verse.py
app/services/: selection.py
data/: sample_verses.csv
gui/: __init__.py  main.py  manager.py
scripts/: load_verses.py  schedule_verses.py
tests/: test_api.py  test_database.py  test_gui.py  test_integration.py  test_selection.py
